RESOLVED FIXED 206063
[LFC][Integration] Fix accessibility/scroll-to-make-visible-iframe-offscreen.html
https://bugs.webkit.org/show_bug.cgi?id=206063
Summary [LFC][Integration] Fix accessibility/scroll-to-make-visible-iframe-offscreen....
Antti Koivisto
Reported 2020-01-10 05:53:45 PST
This is failing due to missing LFC implementation for RenderText::absoluteQuads
Attachments
patch (6.74 KB, patch)
2020-01-10 05:58 PST, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2020-01-10 05:58:22 PST
alan baradlay
Comment 2 2020-01-10 07:23:13 PST
>curl: (22) The requested URL returned error: 404 Not Found Please make sure that your patch won't break the "Tools/BuildSlaveSupport/download-built-product" step
WebKit Commit Bot
Comment 3 2020-01-10 07:46:33 PST
Comment on attachment 387332 [details] patch Clearing flags on attachment: 387332 Committed r254339: <https://trac.webkit.org/changeset/254339>
WebKit Commit Bot
Comment 4 2020-01-10 07:46:35 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2020-01-10 07:47:12 PST
Note You need to log in before you can comment on or make changes to this bug.