[LFC][Integration] Fix accessibility/scroll-to-make-visible-iframe-offscreen.html https://bugs.webkit.org/show_bug.cgi?id=206063

Reviewed by Zalan Bujtas.

This is failing due to missing LFC implementation for RenderText::absoluteQuad.

* rendering/RenderText.cpp:
(WebCore::collectAbsoluteQuadsForNonComplexPaths):

Implement generic version for collecting absolute quads. It doesn't cover everything that is needed for
the complex path so that still calls into layout system specific code.

(WebCore::RenderText::absoluteQuadsClippedToEllipsis const):
(WebCore::RenderText::absoluteQuads const):
(WebCore::RenderText::layoutFormattingContextLineLayout const):
(WebCore::RenderText::usesComplexLineLayoutPath const):
* rendering/RenderText.h:
* rendering/SimpleLineLayoutFunctions.cpp:
(WebCore::SimpleLineLayout::collectAbsoluteQuads): Deleted.

Not needed anymore.

* rendering/SimpleLineLayoutFunctions.h:


Canonical link: https://commits.webkit.org/219182@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254339 268f45cc-cd09-0410-ab3c-d52691b4dbfc